tests/parser/pass/struct2.c
struct name { int test;} giveMeAName;
struct {int a; char doesNotMakeSense; } giveMeLong;

struct name functionName; 
