tests/parser/fail/struct3.c
struct name { int test;} giveMeAName { }
